src/components/Weather.module.css
.weather {
  place-self: center;
  padding: 40px;
  background-image: linear-gradient(45deg, #2f4680, #500ae4);
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10px;
  /* max-width: 360px; */
  min-height: 400px;
  /* margin: 0 auto; */
}
@media only screen and (max-width: 600px) {
  .weather {
    /* max-width: unset; */
    padding: 20px;
  }
}

.weather_content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}
.weather_content > p {
  font-size: 18px;
  color: #fff;
}

.weather_conditions {
  font-size: 18px;
  color: #fff;
}

.location_box {
  text-align: center;
}

.search_box {
  display: flex;
  align-items: center;
  gap: 12px;
  max-width: 320px;
  margin: 0 auto;
}

.search_box input {
  height: 50px;
  border: none;
  outline: none;
  border-radius: 40px;
  padding-left: 25px;
  color: #626262;
  background-color: #ebfffc;
  font-size: 18px;
}

.search_box span {
  align-items: center;
  display: flex;
  justify-content: center;
  /* width: 50px; */
  padding: 15px;
  border-radius: 50%;
  background-color: #ebfffc;
}

.weather-icon {
  width: 150px;
  margin: 30px 0;
}

.temperature {
  color: #fff;
  font-size: 65px;
  line-height: 1;
}

.location {
  color: #fff;
  font-size: 30px;
}

.weather_data {
  width: 100%;
  margin-top: 40px;
  color: #fff;
  display: flex;
  justify-content: space-between;
}

.weather_data col {
  display: flex;
  align-items: flex-start;
  gap: 12px;
  font-size: 22px;
}

.weather_data col span {
  display: block;
  font-size: 16px;
}

.weather_data col img {
  width: 26px;
  margin-top: 10px;
}

.error_msg {
  font-size: 20px;
  margin-top: 20px;
  color: #fff;
}

